--- a/env_config.json
+++ b/env_config.json
@@ -1,5 +1,5 @@
 {
-    "fargate-env": {
+    "pipeline": {
         "role": "arn:aws:iam::529160314193:role/ExampleGithubRole",
         "region": "ap-northeast-1",
         "state_bucket":"aws-proton-terraform-bucket-529160314193"
